documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L71W32API BOOL __stdcall L71_RAMIsDPM(ULONG addrval);

L71W32API USHORT __stdcall L71_RAMRdB(ULONG addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_RAMRdL(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_RAMRdW(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWipe(HCARD handleval);

L71W32API VOID __stdcall L71_RAMWipeEx(USHORT value,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RcvAlloc(ULONG configval,USHORT framenum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RcvConfigExx(ULONG rtconfigval,USHORT intfreq,ULONG monconfigval,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

L71W32API USHORT __stdcall L71_RcvCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_RcvCountWr(USHORT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_RcvDataCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_RcvDataCountWr(USHORT countval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RcvIndex(USHORT framenum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTConfig(ULONG configval,INT taval,USHORT intfreq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTConfigEx(ULONG configval,INT taval,USHORT intfreq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RTConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

L71W32API LISTADDR __stdcall L71_RTCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API LISTADDR __stdcall L71_RTCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API LISTADDR __stdcall L71_RTCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RTCreateMsg(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RTGetMsg(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTReset(INT taval,HCARD handleval);

L71W32API USHORT __stdcall L71_RTStatus(INT taval,HCARD handleval);

L71W32API USHORT __stdcall L71_RTSWDRd(INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTSWDWr(USHORT swdval,INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedBuildExx(ULONG frametime,INT nummsgs,LPMSGADDR msgaddr,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_SchedDisplay(ULONG nummsgs,LPULONG count);

L71W32API VOID __stdcall L71_SchedHook(INT index,LPVOID ptr);

L71W32API ERRVAL __stdcall L71_SchedInsEnd(HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedInsMsg(ULONG index,LPMSGADDR msgaddr,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedInsStart(ULONG frametime,ULONG count,HCARD handleval);

L71W32API ULONG __stdcall L71_SchedMaxval(LPULONG array,ULONG arraycount);

L71W32API ULONG __stdcall L71_SchedMinval(LPULONG array,ULONG arraycount);

L71W32API ERRVAL __stdcall L71_SEEPokeW(INT value,INT numbits,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEERdBit(LPINT valueptr,INT bitnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEERdL(LPULONG valueptr,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEERdW(LPINT valueptr,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEEWrBit(INT value,INT bitnum,HCARD handleval);