documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMIsDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RAMIsDPM(UInt32 addrval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RAMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RAMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RAMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWipe(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWipeEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWipeEx(UInt16 value, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvAlloc@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RcvAlloc(UInt32 configval, UInt16 framenum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvConfigExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RcvConfigExx(UInt32 rtconfigval, UInt16 intfreq, UInt32 monconfigval, UInt32 intconfigval, UInt16 inttotal, UInt32 msgconfigval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RcvCountRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RcvCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvDataCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RcvDataCountRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvDataCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RcvDataCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvIndex@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RcvIndex(UInt16 framenum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RTConfig(UInt32 configval, Int32 taval, UInt16 intfreq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RTConfigEx(UInt32 configval, Int32 taval, UInt16 intfreq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTConfigExx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RTConfigExx(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RTConfigMsg(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTCreateList@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RTCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTCreateListEx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RTCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTCreateListExx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RTCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTCreateMsg@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RTCreateMsg(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTGetMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RTGetMsg(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RTReset(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RTStatus(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RTSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RTSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RTSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedBuild(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 freq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedBuildEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedBuildEx(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 freq, ref Int32 period, IntPtr buf, UInt32 bufsize, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedBuildExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedBuildExx(UInt32 frametime, Int32 nummsgs, ref UInt32 msgaddr, ref Int32 period, IntPtr buf, UInt32 bufsize, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedCalc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedCalc(ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedDisplay@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_SchedDisplay(UInt32 nummsgs, ref UInt32 count);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedHook@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_SchedHook(Int32 index, IntPtr ptr);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedInsEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedInsEnd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedInsMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedInsMsg(UInt32 index, ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedInsStart@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SchedInsStart(UInt32 frametime, UInt32 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_SchedMaxval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SchedMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_SchedMinval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SEEPokeW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SEEPokeW(Int32 value, Int32 numbits, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SEERdBit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SEERdBit(ref Int32 valueptr, Int32 bitnum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SEERdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SEERdL(ref UInt32 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SEERdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SEERdW(ref Int32 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_SEEWrBit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_SEEWrBit(Int32 value, Int32 bitnum, UInt32 handleval);
